@@ -8,6 +8,8 @@ In progress
 - Armitage now detects hashdump failure and reports possible causes to you.
 - Armitage now binds default handler to 0.0.0.0. 
 - Added setg AutoSystemInfo true to Armitage's Metasploit staging
+- Added a table view for the targets area. Go to View -> Targets to change the
+  setting. If you're working with many hosts, table view may be better for you.
 
 13 Jan 11 Changes
 ---------
